# plaza-mkforms

./: .gitignore  README.md  pyproject.toml
plaza_mkforms/: admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
plaza_mkforms/migrations/: 0001_initial.py  0002_documentaa_created_at_setting.py  0003_alter_setting_logo.py
plaza_mkforms/templates/plaza_mkforms/documentaa/: create.html  edit.html  list.html
plaza_mkforms/templates/plaza_mkforms/setting/: edit.html  list.html
project/: asgi.py  settings.py  urls.py  wsgi.py
tests/: __init__.py
