[project]
name = "plaza-mkforms"
version = "0.0.1"
description = "Plaza MK Forms for report generation."
authors = [
    {name = "gcca", email = "git@gcca.dev"},
]
dependencies = ["Django>=6.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
